--- a/style.css
+++ b/style.css
@@ -25,12 +25,12 @@ body {
 
 .container {
   max-width: 720px;
-  min-width: 400px;
   margin: auto;
+  padding: 0 20px;
 }
 
 .priority {
-  font-size: 24px;
+  font-size: 22px;
   padding: 15px 0px;
 }
 
